--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -4,7 +4,6 @@
 <div th:replace="fragments :: header"></div>
 
 <body>
-
 	<div id="wrapper">
 		<div th:replace="fragments :: navigation"></div>
         <div id="page-wrapper">
@@ -17,8 +16,7 @@
 						<div class="panel-heading">Manage Users</div>
 						<!-- /.panel-heading -->
 						<div class="panel-body">
-							<table width="100%" class="table table-bordered table-hover"
-								id="users-table">
+							<table width="100%" class="table table-bordered table-hover" id="users-table">
 								<thead>
 									<tr>
 										<th>First Name</th>
@@ -69,89 +67,6 @@
 	
 	<div th:replace="fragments :: scripts"></div>
 	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
-	<script>
-	    $(document).ready(function() {
-            var table = $('#users-table').DataTable({
-            	select: {
-                    style: 'single'
-                },
-                scrollY: '30vh',
-                scrollX: '100vh',
-                scrollCollapse: false,
-                dom: 'Bfrtip',
-                buttons: [
-                	{
-	                	text: '<i class="fa fa-plus fa-fw"></i>',
-	                    action: function () {
-	                    	alert( 'Add User' );
-	                    },
-	                    titleAttr: 'Add User'
-                	},
-                	{
-	                	text: '<i class="fa fa-pencil fa-fw"></i>',
-	                    action: function () {
-	                    	alert( 'Edit User' );
-	                    },
-	                    titleAttr: 'Edit User'
-                	},
-                	{
-	                	text: '<i class="fa fa-trash-o fa-fw"></i>',
-	                    action: function () {
-	                    	alert( 'Delete User' );
-	                    },
-	                    titleAttr: 'Delete User'
-                	}
-                ]
-            });
-            
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Mayuresh', 'Halshikar', 'mayuresh@invensist.com', '8975823363']).draw(false);
-            table.row.add(['Prasad', 'Wagh', 'prasad@invensist.com', '9875823363']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-            table.row.add(['Yogilal', 'Singh', 'yogi@invensist.com', '7775823364']).draw(false);
-            table.row.add(['Ashwin', 'Khadgi', 'shwin@invensist.com', '8865823364']).draw(false);
-
-            table.on( 'select', function ( e, dt, type, indexes ) {
-                if ( type === 'row' ) {
-                    //var data = table.rows( { selected: true } );
-                	$(".user-properties").removeClass("hidden");
-                }
-            	table.columns.adjust().draw();
-            } );
-       	});
-    </script>
-
-
+	<script th:src="@{/js/users.js}"></script>
 </body>
-
 </html>
