--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -107,17 +107,19 @@
 				            <textarea class="form-control" id="address" placeholder="Address"></textarea>
 				        </div>
 				    </div>
-				    <div class="form-group">
-				        <label for="password" class="control-label col-xs-4">Password</label>
-				        <div class="col-xs-5">
-				            <input type="password" class="form-control" id="password" placeholder="Password"/>
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="confirmPassword" class="control-label col-xs-4">Confirm Password</label>
-				        <div class="col-xs-5">
-				            <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password"/>
-				        </div>
+				    <div id="passwords">
+					    <div class="form-group">
+					        <label for="password" class="control-label col-xs-4">Password</label>
+					        <div class="col-xs-5">
+					            <input type="password" class="form-control" id="password" placeholder="Password"/>
+					        </div>
+					    </div>
+					    <div class="form-group">
+					        <label for="confirmPassword" class="control-label col-xs-4">Confirm Password</label>
+					        <div class="col-xs-5">
+					            <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password"/>
+					        </div>
+					    </div>
 				    </div>
 				</form>				
 				
