--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -42,10 +42,6 @@
 	
 	<!-- Custom Fonts -->
 	<link rel="stylesheet" type="text/css"
-		th:href="@{/vendor/invensist/css/invensist.modal.css}" />
-
-	<!-- Custom Fonts -->
-	<link rel="stylesheet" type="text/css"
 		th:href="@{/vendor/font-awesome/css/font-awesome.min.css}" />
 	
 	<!-- App CSS  -->
@@ -76,7 +72,7 @@
             <ul class="dropdown-menu dropdown-user">
                 <li><a href="#"><i class="fa fa-user fa-fw"></i> Profile</a>
                 </li>
-                <li><a href="#"><i class="fa fa-gear fa-fw"></i> Reset Password</a>
+                <li><a th:href="@{/reset-password}"><i class="fa fa-gear fa-fw"></i> Reset Password</a>
                 </li>
                 <li class="divider"></li>
                 <li><a th:href="@{/logout}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
@@ -101,7 +97,7 @@
                             <a th:href="@{/users}"><i class="fa fa-user fa-fw"></i> Users</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-shopping-basket fa-fw"></i> Stores</a>
+                            <a th:href="@{/stores}"><i class="fa fa-shopping-basket fa-fw"></i> Stores</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-users fa-fw"></i> Associates</a>
@@ -184,7 +180,6 @@
 	<script th:src="@{/dist/js/sb-admin-2.js}"></script>
 	<script th:src="@{/vendor/extend/extend.min.js}"></script>
 	<script th:src="@{/js/service.js}"></script>
-	<script th:src="@{/vendor/invensist/js/invensist.modal.js}"></script>
 	<script type="text/javascript">
 		var contextRoot = $("#context").val();
 		contextRoot = contextRoot.substring(0, contextRoot.length-1);;
