--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -100,7 +100,7 @@
                             <a th:href="@{/stores}"><i class="fa fa-shopping-basket fa-fw"></i> Stores</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-users fa-fw"></i> Associates</a>
+                            <a th:href="@{/associates}"><i class="fa fa-users fa-fw"></i> Associates</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-list fa-fw"></i> Items</a>
