--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -103,7 +103,7 @@
                             <a th:href="@{/associates}"><i class="fa fa-users fa-fw"></i> Associates</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-list fa-fw"></i> Items</a>
+                            <a th:href="@{/items}"><i class="fa fa-list fa-fw"></i> Items</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
