--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -107,6 +107,12 @@
 				            <textarea class="form-control" id="address" placeholder="Address"></textarea>
 				        </div>
 				    </div>
+				    <div class="form-group">
+				        <label for="admin" class="control-label col-xs-4">Admin</label>
+				        <div class="col-xs-4">
+				            <input type="checkbox"/>
+				        </div>
+				    </div>
 				    <div id="passwords">
 					    <div class="form-group">
 					        <label for="password" class="control-label col-xs-4">Password</label>
