--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -179,6 +179,8 @@
 	<!-- Custom Theme JavaScript -->
 	<script th:src="@{/dist/js/sb-admin-2.js}"></script>
 	<script th:src="@{/vendor/extend/extend.min.js}"></script>
+	<script th:src="@{/vendor/validator/validator.min.js}"></script>
+	<script th:src="@{/vendor/invensist/invensist.min.js}"></script>
 	<script th:src="@{/js/service.js}"></script>
 	<script type="text/javascript">
 		var contextRoot = $("#context").val();
