--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -79,25 +79,27 @@
 				    <div class="form-group">
 				        <label for="firstName" class="control-label col-xs-4">First Name *</label>
 				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required="required" />
+				            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" 
+				            		required="required" value="Ashwin"/>
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="lastName" class="control-label col-xs-4">Last Name</label>
 				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="lastName" name="lastName"  placeholder="Last Name"/>
+				            <input type="text" class="form-control" id="lastName" name="lastName"  placeholder="Last Name" value="Khadgi"/>
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="email" class="control-label col-xs-4">Email *</label>
 				        <div class="col-xs-5">
-				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
+				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" 
+				            		value="ashwin@gmail.com"/>
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="phone" class="control-label col-xs-4">Phone</label>
 				        <div class="col-xs-5">
-				            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone"/>
+				            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" value="111111"/>
 				        </div>
 				    </div>
 				    <div class="form-group">
@@ -108,36 +110,38 @@
 				    </div>
 				    <div class="form-group">
 				    		<label for="roles" class="control-label col-xs-4">Roles</label>
-							<div class="form-check col-xs-5">
-								<div class="radio">
+							<div class="form-check col-xs-5 roles">
+								<div class="radio role">
 									<label class="form-check-label"> 
 										<input class="form-check-input" type="checkbox" name="admin"/> Admin
 									</label>
 								</div>
-								<div class="radio">
+								<div class="radio role">
 									<label class="form-check-label"> 
 										<input class="form-check-input" type="checkbox" name="planner"/> Planner
 									</label>
 								</div>
-								<div class="radio">
+								<div class="radio role">
 									<label class="form-check-label"> 
 										<input class="form-check-input" type="checkbox" name="user" checked="checked"/> User
 									</label>
 								</div>
+								<div class="at-least-one-role hidden">You should select at least one role</div>
 							</div>
 				    </div>
 				    <div id="passwords">
 					    <div class="form-group password">
 					        <label for="password" class="control-label col-xs-4">Password *</label>
 					        <div class="col-xs-5">
-					            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="required" />
+					            <input type="password" class="form-control" id="password" name="password" placeholder="Password" 
+					            		required="required" value="A"/>
 					        </div>
 					    </div>
 					    <div class="form-group password">
 					        <label for="confirmPassword" class="control-label col-xs-4">Confirm Password *</label>
 					        <div class="col-xs-5">
 					            <input type="password" class="form-control" id="confirm-password" name="confirmPassword" 
-					            			placeholder="Confirm Password" required="required" />
+					            			placeholder="Confirm Password" required="required" value="A"/>
 							    <div class="password-confirm-password-shoud-be-same hidden">Password and Confirm Password should be same</div>
 					        </div>
 					    </div>
