--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -80,26 +80,25 @@
 				        <label for="firstName" class="control-label col-xs-4">First Name *</label>
 				        <div class="col-xs-5">
 				            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" 
-				            		required="required" value="Ashwin"/>
+				            		required="required" />
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="lastName" class="control-label col-xs-4">Last Name</label>
 				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="lastName" name="lastName"  placeholder="Last Name" value="Khadgi"/>
+				            <input type="text" class="form-control" id="lastName" name="lastName"  placeholder="Last Name" />
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="email" class="control-label col-xs-4">Email *</label>
 				        <div class="col-xs-5">
-				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" 
-				            		value="ashwin@gmail.com"/>
+				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="phone" class="control-label col-xs-4">Phone</label>
 				        <div class="col-xs-5">
-				            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" value="111111"/>
+				            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" />
 				        </div>
 				    </div>
 				    <div class="form-group">
@@ -133,15 +132,14 @@
 					    <div class="form-group password">
 					        <label for="password" class="control-label col-xs-4">Password *</label>
 					        <div class="col-xs-5">
-					            <input type="password" class="form-control" id="password" name="password" placeholder="Password" 
-					            		required="required" value="A"/>
+					            <input type="password" class="form-control" id="password" name="password" placeholder="Password" />
 					        </div>
 					    </div>
 					    <div class="form-group password">
 					        <label for="confirmPassword" class="control-label col-xs-4">Confirm Password *</label>
 					        <div class="col-xs-5">
 					            <input type="password" class="form-control" id="confirm-password" name="confirmPassword" 
-					            			placeholder="Confirm Password" required="required" value="A"/>
+					            			placeholder="Confirm Password" />
 							    <div class="password-confirm-password-shoud-be-same hidden">Password and Confirm Password should be same</div>
 					        </div>
 					    </div>
