--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -181,6 +181,7 @@
 	<script th:src="@{/vendor/extend/extend.min.js}"></script>
 	<script th:src="@{/vendor/validator/validator.min.js}"></script>
 	<script th:src="@{/vendor/invensist/invensist.min.js}"></script>
+	<script th:src="@{/vendor/gear.js/gear.js}"></script>
 	<script th:src="@{/js/service.js}"></script>
 	<script type="text/javascript">
 		var contextRoot = $("#context").val();
