--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -10,9 +10,9 @@
 			<!-- /.row -->
 			<div class="row">&nbsp;</div>
 			<!-- /.row -->
-			<div class="row">
+			<div class="row" id="users-table-row">
 				<div class="col-lg-12">
-					<div class="panel panel-default">
+					<div class="panel panel-default panel-no-margin">
 						<div class="panel-heading">Manage Users</div>
 						<!-- /.panel-heading -->
 						<div class="panel-body">
@@ -37,6 +37,15 @@
 			</div>
 			<!-- /.row -->
 			<div class="row">
+				<div class="col-lg-12">
+					<div class="panel panel-no-shadow panel-no-margin" style="text-align: right;" id="upDownButton">
+						<a href="#"><i class="fa fa-chevron-down fa-fw hidden"></i></a>
+						<a href="#"><i class="fa fa-chevron-up fa-fw"></i></a>
+					</div>
+				</div>
+			</div>
+			<!-- /.row -->
+			<div class="row">
 				<div class="col-lg-12 user-properties hidden">
 					<div class="panel panel-default">
 						<div class="panel-heading">User Properties</div>
@@ -49,7 +58,70 @@
 							<div class="tab-content clearfix">
 								<div class="tab-pane active" id="1a">
 									<div class="panel-body">
-										<h4>Info</h4>
+										<form class="form-horizontal" id="propsForm">
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="firstName">First Name</label>
+												<div class="col-sm-10">
+										            <input type="text" class="form-control" 
+										            	id="firstName" name="firstName" disabled="disabled"/>
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="lastName">Last Name</label>
+												<div class="col-sm-10">
+										            <input type="text" class="form-control" 
+										            	id="lastName" name="lastName" disabled="disabled" />
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="email">Email</label>
+												<div class="col-sm-10">
+										            <input type="text" class="form-control" 
+										            	id="email" name="email" disabled="disabled" />
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="phone">Phone</label>
+												<div class="col-sm-10">
+										            <input type="text" class="form-control" 
+										            	id="phone" name="phone" disabled="disabled" />
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="address">Address</label>
+												<div class="col-sm-10">
+													<textarea class="form-control" id="address" name="address"
+															disabled="disabled"></textarea>
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="roles">Roles</label>
+												<div class="col-sm-10">
+													<div>
+														<div class="form-check col-xs-5 roles">
+															<div class="radio role">
+																<label class="form-check-label"> <input
+																	class="form-check-input" type="checkbox" name="admin" />
+																	Admin
+																</label>
+															</div>
+															<div class="radio role">
+																<label class="form-check-label"> <input
+																	class="form-check-input" type="checkbox" name="planner" />
+																	Planner
+																</label>
+															</div>
+															<div class="radio role">
+																<label class="form-check-label"> <input
+																	class="form-check-input" type="checkbox" name="user"
+																	checked="checked" /> User
+																</label>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</form>
 									</div>
 								</div>
 								<div class="tab-pane" id="2a">
