--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -181,7 +181,6 @@
 	<script th:src="@{/vendor/extend/extend.min.js}"></script>
 	<script th:src="@{/vendor/validator/validator.min.js}"></script>
 	<script th:src="@{/vendor/invensist/invensist.min.js}"></script>
-	<script th:src="@{/vendor/gear.js/gear.js}"></script>
 	<script th:src="@{/js/service.js}"></script>
 	<script type="text/javascript">
 		var contextRoot = $("#context").val();
@@ -189,3 +188,11 @@
 	</script>
 </div>
 
+<table width="100%" class="table table-bordered table-hover" id="stores-table" th:fragment="stores-table">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Type</th>
+		</tr>
+	</thead>
+</table>
