--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -125,7 +125,9 @@
 									</div>
 								</div>
 								<div class="tab-pane" id="2a">
-									<h4>Stores</h4>
+									<div class="panel-body">
+										<div th:replace="fragments :: stores-table"></div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -164,7 +166,8 @@
 				    <div class="form-group">
 				        <label for="email" class="control-label col-xs-4">Email *</label>
 				        <div class="col-xs-5">
-				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
+				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" 
+				            	th:attr="data-remote=@{/check-valid-email.json}" required="required" />
 				        </div>
 				    </div>
 				    <div class="form-group">
