--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -141,92 +141,8 @@
 	</div>
 
 	<!-- Modal HTML -->
-	<div id="userDialog" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="userDialogTitle"></h4>
-				</div>
-				<form class="form-horizontal modal-body" id="usersForm" novalidate="novalidate" name="user">
-				    <div class="form-group">
-				        <label for="firstName" class="control-label col-xs-4">First Name *</label>
-				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" 
-				            		required="required" />
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="lastName" class="control-label col-xs-4">Last Name</label>
-				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="lastName" name="lastName"  placeholder="Last Name" />
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="email" class="control-label col-xs-4">Email *</label>
-				        <div class="col-xs-5">
-				            <input type="email" class="form-control" id="email" name="email" placeholder="Email" 
-				            	th:attr="data-remote=@{/check-valid-email.json}" required="required" />
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="phone" class="control-label col-xs-4">Phone</label>
-				        <div class="col-xs-5">
-				            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" />
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="address" class="control-label col-xs-4">Address</label>
-				        <div class="col-xs-5">
-				            <textarea class="form-control" id="address" name="address" placeholder="Address"></textarea>
-				        </div>
-				    </div>
-				    <div class="form-group">
-				    		<label for="roles" class="control-label col-xs-4">Roles</label>
-							<div class="form-check col-xs-5 roles">
-								<div class="radio role">
-									<label class="form-check-label"> 
-										<input class="form-check-input" type="checkbox" name="admin"/> Admin
-									</label>
-								</div>
-								<div class="radio role">
-									<label class="form-check-label"> 
-										<input class="form-check-input" type="checkbox" name="planner"/> Planner
-									</label>
-								</div>
-								<div class="radio role">
-									<label class="form-check-label"> 
-										<input class="form-check-input" type="checkbox" name="user" checked="checked"/> User
-									</label>
-								</div>
-								<div class="at-least-one-role hidden">You should select at least one role</div>
-							</div>
-				    </div>
-				    <div id="passwords">
-					    <div class="form-group password">
-					        <label for="password" class="control-label col-xs-4">Password *</label>
-					        <div class="col-xs-5">
-					            <input type="password" class="form-control" id="password" name="password" placeholder="Password" />
-					        </div>
-					    </div>
-					    <div class="form-group password">
-					        <label for="confirmPassword" class="control-label col-xs-4">Confirm Password *</label>
-					        <div class="col-xs-5">
-					            <input type="password" class="form-control" id="confirm-password" name="confirmPassword" 
-					            			placeholder="Confirm Password" />
-							    <div class="password-confirm-password-shoud-be-same hidden">Password and Confirm Password should be same</div>
-					        </div>
-					    </div>
-				    </div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="submit" class="btn btn-primary" id="saveUser">Save changes</button>
-					</div>
-				</form>				
-			</div>
-		</div>
-	</div>
+	<div th:replace="dialogs :: user-dialog"></div>
+	<div th:replace="dialogs :: user-store-dialog"></div>
 	<div th:replace="fragments :: scripts"></div>
 	<script th:src="@{/js/users.js}"></script>
 </body>
