--- a/src/main/resources/templates/dialogs.html
+++ b/src/main/resources/templates/dialogs.html
@@ -16,6 +16,11 @@
 				</div>
 				<form class="form-horizontal modal-body" id="usersForm"
 					novalidate="novalidate" name="user">
+					<div class="form-group">						
+						<div class="col-xs-5">
+							<input type="hidden" class="form-control" id="id" name="id"  />
+						</div>
+					</div>
 					<div class="form-group">
 						<label for="firstName" class="control-label col-xs-4">First
 							Name *</label>
