--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -182,6 +182,7 @@
 	<script th:src="@{/vendor/validator/validator.min.js}"></script>
 	<script th:src="@{/vendor/invensist/invensist.min.js}"></script>
 	<script th:src="@{/js/service.js}"></script>
+	<script th:src="@{/js/invensist-components.js}"></script>
 	<script type="text/javascript">
 		var contextRoot = $("#context").val();
 		contextRoot = contextRoot.substring(0, contextRoot.length-1);;
