--- a/src/main/resources/templates/dialogs.html
+++ b/src/main/resources/templates/dialogs.html
@@ -125,7 +125,7 @@
 				<div class="modal-body dual-selector"></div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="submit" class="btn btn-primary" id="saveStoreAssignment">Save changes</button>
+					<button type="submit" class="btn btn-primary" id="saveStoreAssignments">Save changes</button>
 				</div>
 			</div>
 		</div>
