--- a/src/main/resources/templates/dialogs.html
+++ b/src/main/resources/templates/dialogs.html
@@ -122,10 +122,10 @@
 						aria-hidden="true">&times;</button>
 					<h4 class="modal-title" id="userStoreDialogTitle"></h4>
 				</div>
-				<div class="modal-body"></div>
+				<div class="modal-body dual-selector"></div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="submit" class="btn btn-primary" id="saveUser">Save changes</button>
+					<button type="submit" class="btn btn-primary" id="saveStoreAssignments">Save changes</button>
 				</div>
 			</div>
 		</div>
