--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -197,3 +197,14 @@
 		</tr>
 	</thead>
 </table>
+
+<table width="100%" class="table table-bordered table-hover" id="users-table" th:fragment="users-table">
+	<thead>
+		<tr>
+			<th>First Name</th>
+			<th>Last Name</th>
+			<th>Email</th>
+			<th>Phone</th>
+		</tr>
+	</thead>
+</table>
