--- a/src/main/resources/templates/pages/stores.html
+++ b/src/main/resources/templates/pages/stores.html
@@ -83,8 +83,8 @@
 						aria-hidden="true">&times;</button>
 					<h4 class="modal-title" id="storeDialogTitle"></h4>
 				</div>
-				<div class="modal-body">
-				<form class="form-horizontal">
+				<!-- <div class="modal-body"> -->
+				<form class="form-horizontal" id="storesForm">
 				    <div class="form-group">
 				        <label for="Name" class="control-label col-xs-4">Name</label>
 				        <div class="col-xs-5">
@@ -99,13 +99,14 @@
 				            </select>
 				        </div>
 				    </div>
+				    <div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="submit" class="btn btn-primary" id="addStore">Save changes</button>
+					</div>
 				</form>				
 				
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
+				<!-- </div> -->
+				
 			</div>
 		</div>
 	</div>
