--- a/src/main/resources/templates/pages/associates.html
+++ b/src/main/resources/templates/pages/associates.html
@@ -10,7 +10,7 @@
 			<!-- /.row -->
 			<div class="row">&nbsp;</div>
 			<!-- /.row -->
-			<div class="row">
+			<div class="row" id="associates-table-row">
 				<div class="col-lg-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">Manage Associates</div>
@@ -36,6 +36,15 @@
 			</div>
 			<!-- /.row -->
 			<div class="row">
+				<div class="col-lg-12">
+					<div class="panel panel-no-shadow panel-no-margin" style="text-align: right;" id="upDownButton">
+						<a href="#"><i class="fa fa-chevron-down fa-fw hidden"></i></a>
+						<a href="#"><i class="fa fa-chevron-up fa-fw"></i></a>
+					</div>
+				</div>
+			</div>
+			<!-- /.row -->
+			<div class="row">
 				<div class="col-lg-12 associate-properties hidden">
 					<div class="panel panel-default">
 						<div class="panel-heading">Associate Properties</div>
@@ -49,7 +58,7 @@
 							<div class="tab-content clearfix">
 								<div class="tab-pane active" id="1a">
 									<div class="panel-body">
-										<h4>Info</h4>
+										<div id="associate-info"></div>
 									</div>
 								</div>
 								<div class="tab-pane" id="2a">
