--- a/src/main/resources/templates/pages/associates.html
+++ b/src/main/resources/templates/pages/associates.html
@@ -77,51 +77,7 @@
 		<!-- /#page-wrapper -->
 	</div>
 
-	<!-- Modal HTML -->
-	<div id="associateDialog" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="associateDialogTitle"></h4>
-				</div>
-				<div class="modal-body">
-				<form class="form-horizontal">
-				    <div class="form-group">
-				        <label for="name" class="control-label col-xs-4">Name</label>
-				        <div class="col-xs-5">
-				            <input type="text" class="form-control" id="name" placeholder="Name"/>
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="email" class="control-label col-xs-4">Email</label>
-				        <div class="col-xs-5">
-				            <input type="email" class="form-control" id="email" placeholder="Email"/>
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="phone" class="control-label col-xs-4">Phone</label>
-				        <div class="col-xs-5">
-				            <input type="tel" class="form-control" id="phone" placeholder="Phone"/>
-				        </div>
-				    </div>
-				    <div class="form-group">
-				        <label for="address" class="control-label col-xs-4">Address</label>
-				        <div class="col-xs-5">
-				            <textarea class="form-control" id="address" placeholder="Address"></textarea>
-				        </div>
-				    </div>
-				</form>				
-				
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div th:replace="dialogs :: associate-dialog"></div>
 	<div th:replace="fragments :: scripts"></div>
 	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
 	<script th:src="@{/js/associates.js}"></script>
